# bibtex-mcp

./: .env.example  Dockerfile  LICENSE  MCP_CONNECTION_GUIDE.md  README.md  deployment.md  pyproject.toml  run_server.py  sse_config.py
.github/workflows/: build-and-push.yml
reference_mcp/: __main__.py  aggregator.py  models.py  server.py  server_runner.py  version.py
reference_mcp/providers/: arxiv.py  base.py  dblp.py  openalex.py  registry.py  semantic_scholar.py
scripts/: demo_cli.py
